--- a/FamilyMapClient/app/src/main/res/values/colors.xml
+++ b/FamilyMapClient/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="male_icon">#008000</color>
+    <color name="female_icon">#9400D3</color>
+    <color name="light_black">#808080</color>
+    <color name="white">#ffffff</color>
 </resources>
